Leistungen Bugfixes text-align: center

--- a/src/assets/scss/modules/_content.scss
+++ b/src/assets/scss/modules/_content.scss
@@ -634,6 +634,9 @@ p {
 .it-security, .gebaeudetechnik, .systemintegration{
   .list {
     background-image: linear-gradient(to right, #f1f1f1 , #fefefe);
+    @media screen and (max-width: 39.9375em) {
+      text-align: left;
+    }
   }
   ul {
     padding: 20px 20px;
@@ -808,6 +811,14 @@ strong {
   margin: 15px 0 60px 0;
   @media screen and (max-width: 39.9375em) {
     margin: 15px 0 30px 0;
+    background: $dark-gray;
+    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, $dark-gray 50%, rgba(0,0,0,0) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(0,0,0,0)), color-stop(50%, $dark-gray), color-stop(100%, rgba(0,0,0,0)));
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%, $dark-gray 50%, rgba(0,0,0,0) 100%);
+    background: -o-linear-gradient(left, rgba(0,0,0,0) 0%, $dark-gray 50%, rgba(0,0,0,0) 100%);
+    background: -ms-linear-gradient(left, rgba(0,0,0,0) 0%, $dark-gray 50%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(to right, rgba(0,0,0,0) 0%, $dark-gray 50%, rgba(0,0,0,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=1 );
   }
   background: $dark-gray;
   background: -moz-linear-gradient(left, $dark-gray 0%, rgba(0,0,0,0) 100%);
@@ -826,6 +837,14 @@ strong {
   margin: 15px 0 60px 0;
   @media screen and (max-width: 39.9375em) {
     margin: 15px 0 30px 0;
+    background: white;
+    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, white 50%, rgba(0,0,0,0) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(0,0,0,0)), color-stop(50%, white), color-stop(100%, rgba(0,0,0,0)));
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%, white 50%, rgba(0,0,0,0) 100%);
+    background: -o-linear-gradient(left, rgba(0,0,0,0) 0%, white 50%, rgba(0,0,0,0) 100%);
+    background: -ms-linear-gradient(left, rgba(0,0,0,0) 0%, white 50%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(to right, rgba(0,0,0,0) 0%, white 50%, rgba(0,0,0,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=1 );
   }
   background: white;
   background: -moz-linear-gradient(left, white 0%, rgba(0,0,0,0) 100%);
@@ -845,6 +864,14 @@ strong {
   margin: 15px 0 60px 0;
   @media screen and (max-width: 39.9375em) {
     margin: 15px 0 30px 0;
+    background: $dark-gray;
+    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, $dark-gray 50%, rgba(0,0,0,0) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(0,0,0,0)), color-stop(50%, $dark-gray), color-stop(100%, rgba(0,0,0,0)));
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%, $dark-gray 50%, rgba(0,0,0,0) 100%);
+    background: -o-linear-gradient(left, rgba(0,0,0,0) 0%, $dark-gray 50%, rgba(0,0,0,0) 100%);
+    background: -ms-linear-gradient(left, rgba(0,0,0,0) 0%, $dark-gray 50%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(to right, rgba(0,0,0,0) 0%, $dark-gray 50%, rgba(0,0,0,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=1 );
   }
   background: $dark-gray;
   background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, $dark-gray 100%);
@@ -863,6 +890,14 @@ strong {
   margin: 15px 0 60px 0;
   @media screen and (max-width: 39.9375em) {
     margin: 15px 0 30px 0;
+    background: white;
+    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, white 50%, rgba(0,0,0,0) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(0,0,0,0)), color-stop(50%, white), color-stop(100%, rgba(0,0,0,0)));
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%, white 50%, rgba(0,0,0,0) 100%);
+    background: -o-linear-gradient(left, rgba(0,0,0,0) 0%, white 50%, rgba(0,0,0,0) 100%);
+    background: -ms-linear-gradient(left, rgba(0,0,0,0) 0%, white 50%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(to right, rgba(0,0,0,0) 0%, white 50%, rgba(0,0,0,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=1 );
   }
   background: white;
   background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, white 100%);
